# bmp-negative

./: .gitignore  CHANGELOG.md  README.md  bmp-to-negative-haskell.cabal
app/: Main.hs
src/: BMP.hs
test/: Test.hs
