cabal-version:      2.4
name:               bmp-to-negative-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Do Yun Kim
maintainer:         doyun.kim3878@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bmp-negative
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:    BMP

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      bytestring ^>= 0.10.12.0,
      split ^>= 0.2.3.4
    hs-source-dirs:   app, src
    default-language: Haskell2010
